# remote-service

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml  main.py  main.spec  output.py  pyproject.toml  requirements.txt  untitled.ui
.github/workflows/: build.yml
docker/: gunicorn.conf.py  nginx.conf
src/components/: form.py  view.py
src/server/: backup.py  server.py
static/styles/: styles.qss
